tests/positive/basic/string_index_ascii/input.ci
void main() {
    string s = "abc";
    print(s[1] + "\n");
}
