tests/negative/semantic/wrong_arg_count_arrayremove/input.ci
void main() {
    int[] xs = [1];
    arrayRemove(xs);
}
